Bump from Spring Boot 3.2.1 to 3.4.1 (#924)
* Bump from Spring Boot 3.2.1 to 3.4.1

* update

* update

* Remove runWith

* remove mockito inline